# studio

./: CMakeLists.txt
editor/: App.cpp  App.h  CMakeLists.txt  Common.cpp  Common.h  Node.h  Plugin.cpp  Plugin.h  Share.h  main.cpp
editor/imgui/: ImGuiHelper.cpp  ImGuiHelper.h
editor/ui/: ConsoleWindow.cpp  HierarchyWindow.cpp  HierarchyWindow.h  MainMenu.cpp  MainMenu.h  NewProjectPop.cpp  PreviewWindow.cpp  PreviewWindow.h  ProjectWindow.cpp  ProjectWindow.h  PropertyWindow.cpp  PropertyWindow.h  StudioView.cpp  StudioView.h  ToolWindow.cpp  ToolWindow.h
src/: CMakeLists.txt
src/editor/: App.cpp  App.h  CMakeLists.txt  main.cpp  studio.h
src/editor/core/: Core.hpp  Node.hpp  Plugin.hpp
src/editor/ui/: ConsoleWindow.cpp  ConsoleWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  MainMenu.cpp  MainMenu.h  NewProjectPop.cpp  NewProjectPop.h  PreviewWindow.cpp  ProjectWindow.cpp  ProjectWindow.h  PropertyWindow.cpp  PropertyWindow.h  ToolWindow.cpp  editor_setting.cpp  editor_setting.h
